--- a/02_traitement-de-donnees.qmd
+++ b/02_traitement-de-donnees.qmd
@@ -86,23 +86,17 @@ summarise(filter(select(maTable,noms_des_colonnes),conditions),total=sum(maVaria
 Avec le package **dplyr**, on utilise la fonction `mutate()` qui permet
 de créer plusieurs variables à la fois :
 
-    -   `table ← table %>% mutate(new_var1 = var1, newvar2 = var2)` →
-        formule générique
+-   `table ← table %>% mutate(new_var1 = var1, newvar2 = var2)` →  formule générique
 
-    -   `table ← table %>% mutate(new_var1 = constante)` → création
-        d'une constante
+-   `table ← table %>% mutate(new_var1 = constante)` → création d'une constante
 
-    -   `table ← table %>% mutate(new_var2 = fonction(var1))` → création
-        à partir d'une formule
+-   `table ← table %>% mutate(new_var2 = fonction(var1))` → création à partir d'une formule
 
-    -   `table ← table %>% mutate(new_var3 = var1 + var2)` → création à
-        partir d'opérations arithmétiques
+-   `table ← table %>% mutate(new_var3 = var1 + var2)` → création à partir d'opérations arithmétiques
 
-    -   `table ← table %>% mutate(new_var4 = vecteur1)` → création à
-        partir de variables externes
+-   `table ← table %>% mutate(new_var4 = vecteur1)` → création à partir de variables externes
 
-Pour modifier une variable, on affecte la nouvelle valeur à une variable
-existante
+Pour modifier une variable, on affecte la nouvelle valeur à une variable existante.
 
 ## Création ou modification de variables dans une table (2/3)
 
