doc: ajout équivalent avec R base

--- a/02_traitement-de-donnees.qmd
+++ b/02_traitement-de-donnees.qmd
@@ -100,8 +100,6 @@ Pour modifier une variable, on affecte la nouvelle valeur à une variable exista
 
 ## Création ou modification de variables dans une table (2/3)
 
-## Création ou modification de variables dans une table (3/3)
-
 <br>
 
 -   Paramètres utiles pour aller plus loin :
@@ -117,7 +115,24 @@ Pour modifier une variable, on affecte la nouvelle valeur à une variable exista
 Dans cet exemple, la nouvelle variable est placée après ident, et var1
 et var2 sont supprimés
     
+## Création ou modification de variables dans une table (3/3)
 
+-   Voici les syntaxes équivalentes avec **R de base** :
+
+-   `table$new_var <- variable` → formule générique
+
+-   `table$new_var <- valeur_constante` → création d'une constante
+
+-   `table$new_var <- fonction(table$var1)` → création à partir d'une formule
+
+-   `table$new_var <- table$var1 + table$var2` → création à partir d'opérations
+
+-   `table$new_var <- vecteur1 OU table1$new_var <- table2$var1` → création à partir de variables externes
+
+-   `table$new_var <- ifelse(table$varref < x, val1, val2)` OU
+    `table$new_var <- case_when(table$varref < x ~ val1, TRUE ~ val2)`  → traitement conditionnel
+        
+        
 ## Fonctions utiles au traitement des chaînes de caractères
 
 ![](img/clipboard-recap-fonctions.png)
