--- a/03_objets.qmd
+++ b/03_objets.qmd
@@ -100,7 +100,7 @@ rev(sort(x))
 
 ## Les data.frame : tables de données
 
-NB : le **data.frame** est l'objet que l'on manipule le plus
+Le **data.frame** est l'objet que l'on manipule le plus
 habituellement (tables du RA, etc.). C'est un tableau de données avec
 des lignes et des colonnes
 
@@ -138,15 +138,8 @@ x <- data.frame(nom=c("Yaël","Luan","Jade"),   # 1er élément : un vecteur « 
 -   `summary()` renvoie un résumé du data.frame (utile pour explorer un
     jeu de données)
 
+
 ## Data.frame : exemples de code (1/3)
-
-```{.r}
-str(maTable) 
-summary(maTable) # noter la différence entre les vecteurs caractères et facteurs
-
-```
-
-## Data.frame : exemples de code (2/3)
 
 ```{.r}
 maTable <- data.frame(
@@ -174,6 +167,33 @@ maTable <- data.frame(
 10   b 8.856342   56.02326    1     E         J   FALSE
 ```
 
+## Data.frame : exemples de code (2/3)
+
+```{.r}
+str(maTable)
+> 'data.frame':	10 obs. of  7 variables:
+ $ cat      : chr  "a" "b" "a" "b" ...
+ $ var1     : num  8.43 8.77 8.71 9.88 3.02 ...
+ $ var2     : num  -205.9 -87.3 -18.5 -261.6 -32 ...
+ $ var3     : int  NA NA NA 2 6 1 1 9 10 2
+ $ fact1    : Factor w/ 5 levels "A","B","C","D",..: 1 2 3 4 5 1 2 3 4 5
+ $ majuscule: chr  "A" "B" "C" "D" ...
+ $ logique  : logi  FALSE TRUE TRUE TRUE FALSE TRUE ...
+```
+
+```{.r}
+summary(maTable) # noter la différence entre les vecteurs caractères et facteurs
+
+>  cat                 var1            var2               var3        fact1  majuscule          logique       
+ Length:10          Min.   :3.020   Min.   :-261.589   Min.   : 1.000   A:2   Length:10          Mode :logical  
+ Class :character   1st Qu.:5.386   1st Qu.: -73.500   1st Qu.: 1.500   B:2   Class :character   FALSE:5        
+ Mode  :character   Median :7.979   Median :  -9.719   Median : 2.000   C:2   Mode  :character   TRUE :5        
+                    Mean   :7.012   Mean   : -38.531   Mean   : 4.429   D:2                                     
+                    3rd Qu.:8.651   3rd Qu.:  44.160   3rd Qu.: 7.500   E:2                                     
+                    Max.   :9.875   Max.   :  75.879   Max.   :10.000                                           
+                                                       NA's   :3                      
+```
+
 ## Data.frame : exemples de code (3/3)
 
 ```{.r}
@@ -187,10 +207,10 @@ names(maTable)
 
 ## Les listes (un objet fourre-tout)
 
-NB : la **liste** est un objet apparemment moins usuel quand on débute
+La **liste** est un objet apparemment moins usuel quand on débute
 avec `dplyr`, mais qui peut être très utile notamment à l'intérieur de
 fonctions (across), pour faire des boucles (purrr) ou bien quand on doit
-ranger dans un unique objet, des objets de toute sorte,
+ranger dans un unique objet, des objets de toute sorte.
 
 -   Une **liste** est composée d'objets de types et tailles différents
     (peut-être très utile en sortie de fonction).
@@ -202,7 +222,8 @@ x ← list(c(TRUE, TRUE, FALSE),           # 1er élément : un vecteur de trois
          c(8.04, 18.01, 11.05, 14.05),   # 2e élément : un vecteur de quatre numériques
          c(804"))                        # 3e élément : un vecteur d'une chaîne de caractères
 ```
-
+  
+  
 *NB : un data.frame est une liste de vecteurs de même taille.*
 
 ## Listes : exemples de code (1/2)
