--- a/04_indexation.qmd
+++ b/04_indexation.qmd
@@ -36,7 +36,7 @@ mon_df[1,]
 ```
 
 
-## Vecteur, indexation avec les crochets:
+## Vecteur, indexation avec les crochets:
 
 -   Indexation **par position** :
 
@@ -58,16 +58,15 @@ mon_df[1,]
 
 ## Data.frame (1/3) : principes de navigation
 
--   Indexation **par position** : \[no de ligne, no de colonne\]
+-   Indexation **par position** : \[numéro de ligne, numéro de colonne\]
 
 -   Indexation **par nom** : les vecteurs d'une data.frame sont nommés
-    et accessibles directement dans les crochets ou via l'opérateur \$
+    et accessibles directement dans les crochets ou via l'opérateur `$`
 
 -   Les moyens d'indexation peuvent se combiner et permettre de filtrer
     les colonnes et les lignes (équivalent de `select()` et `filter()`)
 
-→ Il y a donc une multitude de façons d'accéder à une valeur dans un
-data.frame !
+→ Il y a donc une multitude de façons d'accéder à une valeur dans un data.frame !
 
 ## Data.frame (2/3) : illustration
 
