--- a/04_indexation.qmd
+++ b/04_indexation.qmd
@@ -102,51 +102,56 @@ mon_df$letters[1:4]  # avec le symbole $ on a aussi un vecteur qu'on peut indexe
 -   `table$new_var <- ifelse(table$varref < x, val1, val2)` OU
     `table$new_var <- case_when(table$varref < x ~ val1, TRUE ~ val2)`  → traitement conditionnel
 
-## Listes
+## Listes (1/2)
 
-Indexation **par position** :
+**Indexation par position** :
 
    `x <- list(c(TRUE, TRUE, FALSE), c(8.04, 18.01, 11.05, 14.05), "804")`
    
-   => x[[2]] renvoie le deuxième vecteur de la liste x soit `c(8.04, 18.01, 11.05, 14.05)`  
+   => `x[[2]]` renvoie le deuxième vecteur de la liste x soit `c(8.04, 18.01, 11.05, 14.05)`  
    
-   => x[[2]][1] renvoie le premier élément du deuxième vecteur de la liste x soit `8.04`  
+   => `x[[2]][1]` renvoie le premier élément du deuxième vecteur de la liste x soit `8.04`  
 
 ::: callout-note
 Attention :  
-   x[2], avec de simples crochets, renvoie une liste composée d'un élément : le 2e vecteur de la liste x
+   `x[2]` avec de simples crochets, renvoie une liste composée d'un élément : le 2e vecteur de la liste x
 ::: 
 
-```
+## Listes (2/2)
 
-Indexation **par nom** si les vecteurs sont nommés avec l'opérateur \$ :
-```{.r}
+
+**Indexation par nom** :   
+
    `x <- list(grp = c("Auguste", "Justine", "Sébastien", "Anne-Marie"), prt = c("Hélène", "Raymond"), enf = c("Marion", "Benjamin")`
-   `x$grp renvoie le vecteur nommé "grp" de la liste x soit c("Auguste", "Justine", "Sébastien", "Anne-Marie")`
-   `x$enf[1] renvoie le premier élément du vecteur nommé "enf" de la liste x soit "Marion"`
-```
-NB : Possibilité d'utiliser la fonction `pluck()` du package purrr (pour éviter de s'y perdre)
-```{.r}
+   
+   => `x$grp` renvoie le vecteur nommé "grp" de la liste x soit `c("Auguste", "Justine", "Sébastien", "Anne-Marie")`
+   
+   => `x$enf[1]` renvoie le premier élément du vecteur nommé "enf" de la liste x soit `"Marion"`
+   
+
+NB : Possibilité d'utiliser la fonction `pluck()` du package {purrr} (pour éviter de s'y perdre)
+
    `x <- list(c(TRUE, TRUE, FALSE), c(8.04, 18.01, 11.05, 14.05), "804")`
-   `pluck(x,2) renvoie le deuxième vecteur de la liste x soit c(8.04, 18.01, 11.05, 14.05)`
-   `pluck(x,2,1) renvoie le premier élément du deuxième vecteur de la liste x soit 8.04`
+   
+   => `pluck(x,2)` renvoie le deuxième vecteur de la liste x soit `c(8.04, 18.01, 11.05, 14.05)`
+   => `pluck(x,2,1)` renvoie le premier élément du deuxième vecteur de la liste x soit `8.04`
 
 
-```
+## Matrices, indexation avec les crochets:
 
-## Matrices et arrays, indexation avec les crochets:
+Création d'une matrice :  
 
-Indexation **par position** :
+`x <- matrix(c("Marion", "Benjamin", "Hélène", "Raymond"), nrow = 2, ncol = 2)`
 
--   `x <- matrix(c("Marion", "Benjamin", "Hélène", "Raymond"), nrow = 2, ncol = 2)`
--   `x[1,] renvoie le vecteur c("Marion", "Hélène")`
--   `x[,2] renvoie le vecteur c("Hélène", "Raymond")`
--   `x[2,1] renvoie "Benjamin"`
 
-<br>
-
-``` r
+```{.r}
      [,1]       [,2]     
 [1,] "Marion"   "Hélène" 
 [2,] "Benjamin" "Raymond"
 ```
+
+Indexation **par position** :
+
+=> `x[1,]` renvoie le vecteur `c("Marion", "Hélène")`
+=> `x[,2]` renvoie le vecteur `c("Hélène", "Raymond")`
+=> `x[2,1]` renvoie `"Benjamin"`
