--- a/03_objets.qmd
+++ b/03_objets.qmd
@@ -76,7 +76,7 @@ seq(0,1,0.1)
 
 ## Les vecteurs : exemples de code (2/2)
 
-# Exemple sur le type des vecteurs :  
+- Exemple sur le type des vecteurs :  
 
 ```{.r}
 x <- c(1, "two", 3.0, TRUE,"29") # un vecteur ne peut être que d'une sorte
@@ -85,7 +85,7 @@ class(x)
 > [1] "character"
 ```
 
-Tri et renversement des éléments d'un vecteur :  
+- Tri et renversement des éléments d'un vecteur :  
 
 ```{.r}
 # Création du vecteur x
