fix: modification pipe

--- a/02_traitement-de-donnees.qmd
+++ b/02_traitement-de-donnees.qmd
@@ -53,12 +53,12 @@ summarise(filter(select(maTable,noms_des_colonnes),conditions),total=sum(maVaria
 
 -   Pour filtrer les lignes dans une table à l'aide de conditions logiques, on utilise la fonction `filter()`  
 
-    `maTable %\>% select(noms_des_colonnes)`
+    `maTable %>% select(noms_des_colonnes)`
 
 -   Pour sélectionner des colonnes dans une table, on utilise la
     fonction `select()`
     
-     `maTable %\>% select(noms_des_colonnes)`
+     `maTable %>% select(noms_des_colonnes)`
 
 
 [ma_table %\>% filter(Profession == "Militaire")]{.Bourgeon2}
