--- a/02_traitement-de-donnees.qmd
+++ b/02_traitement-de-donnees.qmd
@@ -287,11 +287,11 @@ chaque type de fichier:
 | Type        | Lecture                                           | Ecriture                                                                      |
 |------------|--------------------------------|------------------------------|
 | Texte       | `reader::read_delim()`                            | `reader::write_delim()`                                                       |
-| RDS         | `read_rds()`                                      | `readr::write_rds()`                                                          |
+| RDS         | `readr::read_rds()`                                      | `readr::write_rds()`                                                          |
 | XLS         | les fonctions du package {readxl}                 | les fonctions du package {openxlsx}                                           |
 | SAS ou SPSS | `haven::read_sas()` et `haven::read_spss()`   | Exporter au format texte puis lecture dans SAS ou SPSS (sans objet désormais) |
 | ODS         | `readODS::read_ods()`                             | `readODS::write_ods()`                                                        |
-| Parquet     | Les packages `arrow` et `duckdb`                  | Le package `arrow`\      
+| Parquet     | Les packages `arrow` et `duckdb`                  | Le package `arrow`      
 
 ## Base de données avec R (avancé)
 
