--- a/02_traitement-de-donnees.qmd
+++ b/02_traitement-de-donnees.qmd
@@ -78,7 +78,7 @@ summarise(filter(select(maTable,noms_des_colonnes),conditions),total=sum(maVaria
 -   En indiquant un vecteur de variables consécutives : `select(Nom_prenom:Code_postal_residence)`  
 -   En donnant les indices des variables : `select(1:3)`  
 -   Grâce à de la sélection avec des opérateurs "helpers" (contient, commence par, finit par... : `select(contains("a"),starts_with("P"),ends_with("E"),where(is.numeric), last_col())`
--   En enlevant celles dont on ne veut pas : `select(-Age)` ou `select(!(Age:Code_postal_residence)`
+-   En enlevant celles dont on ne veut pas : `select(-Age)` ou `select(!(Age:Code_postal_residence))`
 
 
 ## Création ou modification de variables dans une table (1/2)
